--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -39,3 +39,7 @@ expo.webp.enabled=true
 # Enable animated webp support (~3.4 MB increase)
 # Disabled by default because iOS doesn't support animated webp
 expo.webp.animated=false
+MYAPP_RELEASE_STORE_FILE=emoclew7183.keystore
+MYAPP_RELEASE_KEY_ALIAS=3817
+MYAPP_RELEASE_STORE_PASSWORD=spahskstptkd7183
+MYAPP_RELEASE_KEY_PASSWORD=spahskstptkd7183
