--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "noovie",
   "version": "1.0.0",
   "main": "index.js",
+  "rnpm":{
+    "assets":[
+      "./assets/fonts"
+    ]
+  },
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
@@ -9,13 +14,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.17",
+    "@react-native-community/slider": "^4.2.0",
+    "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
     "expo": "~44.0.2",
+    "expo-app-loading": "~1.3.0",
+    "expo-asset": "~8.4.6",
+    "expo-font": "~10.0.4",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-fade-in-out": "^1.0.6",
+    "react-native-gesture-handler": "^2.1.1",
+    "react-native-make": "^1.0.1",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-typewriter": "^0.7.0",
+    "react-native-typing-animation": "^0.1.7",
+    "react-native-web": "0.17.1",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
